--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - 8050:8050
     volumes:
       - ./dash-app:/opt/app
+      - ./data/genome:/opt/app/assets/public-data/genome
       - ./data/tsv_files:/opt/app/assets/public-data/tsv_files
       - ./docker_entrypoint_dash.sh:/opt/docker_entrypoint_dash.sh
       - ./run_dash_app.sh:/opt/run_dash_app.sh
