--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - ./data/genome:/opt/app/assets/public-data/genome
       - ./data/tsv_files:/opt/app/assets/public-data/tsv_files
       - ./data/structures:/opt/app/assets/public-data/structures
+      - ./data/preprocessed:/opt/app/assets/public-data/preprocessed
       - ./docker_entrypoint_dash.sh:/opt/docker_entrypoint_dash.sh
       - ./run_dash_app.sh:/opt/run_dash_app.sh
     env_file:
